<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <Button
            android:id="@+id/title_btn_left"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/common_title"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/title_btn_right"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@color/common_title" />

        <LinearLayout
            android:id="@+id/common_constact"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/ll_top_bg"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/constact_group"
                style="@style/top_group"
                android:text="@string/group" />

            <Button
                android:id="@+id/constact_all"
                style="@style/top_all"
                android:text="@string/all" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp" >

        <LinearLayout
            android:id="@+id/ll_constact_serach"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/acm_inputbox"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_search"
                android:textColor="@color/gray_font" />
        </LinearLayout>
    </RelativeLayout>
<include layout="@layout/layout_netbar"/>
    <ListView
        android:id="@+id/lv_news"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@android:color/transparent"
        android:fadingEdgeLength="0dp" />

</LinearLayout>